main: appearance preferences:
